--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="try_out">TRY OUT</string>
+    <string name="try_out">Try Out</string>
     <string name="login">Log In</string>
     <string name="sing_up">Sign Up</string>
 </resources>
