--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="try_out">Try Out</string>
     <string name="login">Log In</string>
     <string name="sing_up">Sign Up</string>
+    <string name="my_routines">My Routines</string>
 </resources>
