--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="my_routines">My Routines</string>
     <string name="progress_title">Progress</string>
     <string name="routines_title">Routines</string>
-    <string name="search_title">Search</string>
+    <string name="explore_title">Explore</string>
 </resources>
