added progress routine screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="progress_title">Progress</string>
     <string name="routines_title">Routines</string>
     <string name="explore_title">Explore</string>
+    <string name="see_routine_details">See routine details</string>
 </resources>
