view model two routines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="routines_title">Routines</string>
     <string name="explore_title">Explore</string>
     <string name="see_routine_details">See routine details</string>
+    <string name="favourite">Favourite</string>
+    <string name="date">Date</string>
+    <string name="points">Points</string>
 </resources>
