--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="favourite">Favourite</string>
     <string name="date">Date</string>
     <string name="points">Points</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
