--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="points">Points</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_third">ThirdActivity</string>
+    <string name="share_msg">Check out the routine! </string>
 </resources>
