--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="title_activity_third">ThirdActivity</string>
     <string name="share_msg">Check out the routine! </string>
     <string name="login_failed">Invalid Username or Password</string>
+    <string name="next_exercise">Next</string>
+    <string name="prev_exercise">Previous</string>
 </resources>
