--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="login_failed">Invalid Username or Password</string>
     <string name="next_exercise">Next</string>
     <string name="prev_exercise">Previous</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="Start">Start</string>
+    <string name="Progress">See Progress</string>
+    <string name="Preview">Preview</string>
 </resources>
