--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="Start">Start</string>
     <string name="Progress">See Progress</string>
     <string name="Preview">Preview</string>
+    <string name="fav">Favourite</string>
 </resources>
