--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="last_activity">Last activity \n</string>
     <string name="see_progress">See Progress</string>
     <string name="fav">Favourite</string>
+    <string name="load_more">Load More</string>
 </resources>
