--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="error_header">There has been an error!</string>
     <string name="error_msg">We are sorry, there has been a problem while accessing the network. Please try again later.</string>
     <string name="error_btn">Take Me Home</string>
+    <string name="rest">Rest</string>
+
 </resources>
