--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="see_progress">See Progress</string>
     <string name="fav">Favourite</string>
     <string name="load_more">Load More</string>
-    <string name="error_header">There has been an error!</string>
+    <string name="error_header">There has been an error</string>
     <string name="error_msg">We are sorry, there has been a problem while accessing the network. Please try again later.</string>
     <string name="error_btn">Take Me Home</string>
     <string name="rest">Rest</string>
