--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,10 @@
     <string name="error_msg">We are sorry, there has been a problem. Please verify there is internet connection and restart the app.</string>
     <string name="error_btn">Take Me Home</string>
     <string name="rest">Rest</string>
+    <string name="display_routines_pic_title">Display Routine Images</string>
+    <string name="display_routines_pic_description">Decide whether to display or not the picture of a routine.</string>
+    <string name="exec_routine_mode_title">Routine Execution Lite Mode</string>
+    <string name="exec_routine_mode_description">Lite mode simplifies the way you execute a routine. Only see the name of the exercise and the description.</string>
+    <string name="settings">Settings</string>
 
 </resources>
