--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -32,5 +32,13 @@
     <string name="error_msg">Lo sentimos, ocurrio un error al acceder a la read. Por favor, inténtelo de nuevo más  tarde.</string>
     <string name="error_btn">Llévame al inicio</string>
     <string name="rest">Descanso</string>
+    <string name="explanationProgress">Este grafico muestra como fue cambiando tu promedio en cada ejecucion de esta rutina.</string>
+    <string name="display_routines_pic_title">Mostrar Imagenes De Las Rutinas</string>
+    <string name="display_routines_pic_description">Elige si quieres ver o no las imagenes de portada para cada rutina.</string>
+    <string name="exec_routine_mode_title">Ejecucion De Rutina En Modo Liviano</string>
+    <string name="exec_routine_mode_description">El modo liviano permite simplificar la forma en la que se muestra cada ejercicio y su descripcion.</string>
+    <string name="settings">Configuracion</string>
+    <string name="finish">Terminar</string>
+    <string name="review_routine">Califica esta rutina:</string>
 
 </resources>
