--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -32,5 +32,7 @@
     <string name="error_msg">Lo sentimos, ocurrio un error al acceder a la read. Por favor, inténtelo de nuevo más  tarde.</string>
     <string name="error_btn">Llévame al inicio</string>
     <string name="rest">Descanso</string>
+    <string name="conection_error">Error de coneccion</string>
+    <string name="try_again">Volver a intentarlo</string>
 
 </resources>
