--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="exec_routine_mode_title">Routine Execution Lite Mode</string>
     <string name="exec_routine_mode_description">Lite mode simplifies the way you execute a routine. Only see the name of the exercise and the description.</string>
     <string name="settings">Settings</string>
-
+    <string name="conection_error">Connection Error</string>
+    <string name="try_again">Try again</string>
 </resources>
