--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="bad_delta_title">Carry On</string>
     <string name="routine_finished_title">Done</string>
     <string name="routine_finished_text">Take a break, you have finished this routine</string>
+    <string name="volume">Volume</string>
 </resources>
